deploy: f03c1db0d169c1da2bae7ff01c5159fbc78be198

--- a/wj.htm
+++ b/wj.htm
@@ -9901,6 +9901,7 @@ natural or conceals a fit in diamonds.
           <span class="dcolor">
            &diams;
           </span>
+          , Truscott
          </td>
         </tr>
        </table>
@@ -10303,6 +10304,129 @@ natural or conceals a fit in diamonds.
           <span class="hcolor">
            &hearts;
           </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="dcolor">
+      &diams;
+     </span>
+     -(1NT)
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Dbl
+         </td>
+         <td>
+          PEN, nearly BAL, 10+ HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          PRE, 3&ndash;9 HCP, 3+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2X
+         </td>
+         <td>
+          PRE, 3&ndash;9 HCP, 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !PRE 7+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , INV+ 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , or UNBAL FG
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !CONST, 7&ndash;9 HCP, 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          PRE, 4&ndash;6 HCP, 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3M
+         </td>
+         <td>
+          PRE, 7+#
          </td>
         </tr>
        </table>
@@ -11488,26 +11612,6 @@ use reverse Bergen raises for hearts for several reasons:
     Polish Club 2020: Expert.
    </em>
   </p>
-  <ul>
-   <li>
-    <strong>
-     From 1NT to 2M-1
-    </strong>
-    : transfers
-   </li>
-   <li>
-    <strong>
-     Simple raise
-    </strong>
-    : constructive raise
-   </li>
-   <li>
-    <strong>
-     Other bids
-    </strong>
-    : same as uncontested
-   </li>
-  </ul>
   <div class="tree">
    <ul>
     <li class="root">
@@ -11524,11 +11628,10 @@ use reverse Bergen raises for hearts for several reasons:
           Rdbl
          </td>
          <td>
-          INV+, BAL 2&ndash;3
+          Nearly BAL INV+, 1&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
-          or 4144
          </td>
         </tr>
        </table>
@@ -11594,7 +11697,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          !FG or weak, 3+
+          !PRE or FG, 3+
           <span class="hcolor">
            &hearts;
           </span>
@@ -11630,7 +11733,42 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          !INV, (54)+ in minors
+          !INV+ T/O, 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !G/T, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , Truscott
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          PRE, 7+#
          </td>
         </tr>
        </table>
@@ -11639,14 +11777,16 @@ use reverse Bergen raises for hearts for several reasons:
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !INV+, 4+
+          3
           <span class="hcolor">
            &hearts;
           </span>
-          , Truscott
+         </td>
+         <td>
+          PRE, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -11671,11 +11811,10 @@ use reverse Bergen raises for hearts for several reasons:
           Rdbl
          </td>
          <td>
-          INV+, BAL 2&ndash;3
+          Nearly BAL INV+, 1&ndash;3
           <span class="scolor">
            &spades;
           </span>
-          or 1444
          </td>
         </tr>
        </table>
@@ -11741,7 +11880,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          !FG or weak, 3+
+          !PRE or FG, 3+
           <span class="scolor">
            &spades;
           </span>
@@ -11767,18 +11906,232 @@ use reverse Bergen raises for hearts for several reasons:
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
           2NT
          </td>
          <td>
-          !INV+, 4+
+          !G/T, 4+
           <span class="scolor">
            &spades;
           </span>
           , Truscott
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          PRE, 7+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          PRE, 4+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <p>
+   We treat 1
+   <span class="hcolor">
+    &hearts;
+   </span>
+   -(1
+   <span class="scolor">
+    &spades;
+   </span>
+   ) as 1
+   <span class="hcolor">
+    &hearts;
+   </span>
+   -(X) for their similarities.
+  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="hcolor">
+      &hearts;
+     </span>
+     -(1
+     <span class="scolor">
+      &spades;
+     </span>
+     )
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Dbl
+         </td>
+         <td>
+          Nearly BAL INV+, 1&ndash;3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          1NT
+         </td>
+         <td>
+          !TRF, 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !TRF, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !PRE or FG, 3+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          CONST, 3+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !INV+ T/O, 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !G/T, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , Truscott
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          PRE, 7+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          PRE, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
