deploy: 4562c1c14675e9f07ec840dabe4adf16a71e36ff

--- a/wj.htm
+++ b/wj.htm
@@ -359,9 +359,31 @@ on that topic.
   <p>
    Our Polish Club opening contains minimum clubs like
    <em>
-    Polish Club 2020: Expert
+    Polish Club 2020:
+Expert.
    </em>
-   .
+   We adjust the 1
+   <span class="dcolor">
+    &diams;
+   </span>
+   opening to contain 18&ndash;20 HCP unbalanced diamonds
+with no 4-card major.  This method makes 1
+   <span class="ccolor">
+    &clubs;
+   </span>
+   -1
+   <span class="dcolor">
+    &diams;
+   </span>
+   -3
+   <span class="ccolor">
+    &clubs;
+   </span>
+   <span class="dcolor">
+    &diams;
+   </span>
+   limited enough (21&ndash;23
+HCP) for their level.
   </p>
   <div class="tree">
    <ul>
@@ -438,7 +460,15 @@ on that topic.
           <span class="dcolor">
            &diams;
           </span>
-          (441).  No 4-card major and UNBAL if 18+ HCP.
+          (441).  If 18&ndash;20 HCP: UNBAL, 0&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+          , 0&ndash;3
+          <span class="hcolor">
+           &hearts;
+          </span>
+          .
          </td>
         </tr>
        </table>
@@ -1188,11 +1218,11 @@ Ting-Yu Ye (TpKotoba).
           </span>
          </td>
          <td>
-          !NF, 21&ndash;23 HCP, 0&ndash;4
+          !NF, 21&ndash;23 HCP, 1&ndash;4
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;4
+          , 1&ndash;4
           <span class="hcolor">
            &hearts;
           </span>
@@ -1288,6 +1318,36 @@ Ting-Yu Ye (TpKotoba).
           <span class="dcolor">
            &diams;
           </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !SPL, 21&ndash;23 HCP, 40(54)
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !SPL, 21&ndash;23 HCP, 04(54)
          </td>
         </tr>
        </table>
@@ -7529,7 +7589,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !F G/T, 15+ HCP, 3=
+          !F G/T, 15&ndash;20 HCP, 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -7544,7 +7604,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           2NT
          </td>
          <td>
-          F G/T, 15+ HCP, 2=
+          F G/T, 15&ndash;20 HCP, 2=
           <span class="hcolor">
            &hearts;
           </span>
@@ -7620,7 +7680,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !FRAG, 18+ HCP, 0&ndash;1
+          !FRAG, 18&ndash;20 HCP, 0&ndash;1
           <span class="hcolor">
            &hearts;
           </span>
@@ -7728,7 +7788,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !F G/T, 15+ HCP, 4+
+          !F G/T, 15&ndash;20 HCP, 4+
           <span class="hcolor">
            &hearts;
           </span>
@@ -7766,7 +7826,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           2NT
          </td>
          <td>
-          F G/T, 15+ HCP, 2=
+          F G/T, 15&ndash;20 HCP, 2=
           <span class="scolor">
            &spades;
           </span>
@@ -7824,7 +7884,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !FRAG, 18+ HCP, 0&ndash;1
+          !FRAG, 18&ndash;20 HCP, 0&ndash;1
           <span class="scolor">
            &spades;
           </span>
@@ -9642,7 +9702,7 @@ natural or conceals a fit in diamonds.
           </span>
          </td>
          <td>
-          S/T, 15+ HCP, 4+
+          S/T, 15&ndash;20 HCP, 4+
           <span class="hcolor">
            &hearts;
           </span>
@@ -9660,7 +9720,7 @@ natural or conceals a fit in diamonds.
           </span>
          </td>
          <td>
-          S/T, 15+ HCP, 4+
+          S/T, 15&ndash;20 HCP, 4+
           <span class="scolor">
            &spades;
           </span>
@@ -9690,7 +9750,7 @@ natural or conceals a fit in diamonds.
           </span>
          </td>
          <td>
-          S/T, 15+ HCP, 4+
+          S/T, 15&ndash;20 HCP, 4+
           <span class="ccolor">
            &clubs;
           </span>
@@ -9708,7 +9768,7 @@ natural or conceals a fit in diamonds.
           </span>
          </td>
          <td>
-          S/T, 15+ HCP, 6+
+          S/T, 15&ndash;20 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
