deploy: 4dd283a54b9edd9aa55b765032b1140ac08e505f

--- a/wj.htm
+++ b/wj.htm
@@ -5589,7 +5589,7 @@ fairly naturally.
           </span>
          </td>
          <td>
-          INV, 13&ndash;14 HCP, 4+
+          FG, 18+ HCP, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -5655,7 +5655,7 @@ fairly naturally.
           </span>
          </td>
          <td>
-          FG, 18+ HCP, 6+
+          FG, 18+ HCP, 5+
           <span class="ccolor">
            &clubs;
           </span>
@@ -5673,7 +5673,7 @@ fairly naturally.
           </span>
          </td>
          <td>
-          FG, 18+ HCP, 6+
+          !FG SPL, 0&ndash;1
           <span class="dcolor">
            &diams;
           </span>
@@ -5691,7 +5691,7 @@ fairly naturally.
           </span>
          </td>
          <td>
-          !FG SPL, 18+ HCP, 0&ndash;1
+          !FG SPL, 0&ndash;1
           <span class="hcolor">
            &hearts;
           </span>
@@ -5709,7 +5709,7 @@ fairly naturally.
           </span>
          </td>
          <td>
-          !FG SPL, 18+ HCP, 0&ndash;1
+          !FG SPL, 0&ndash;1
           <span class="scolor">
            &spades;
           </span>
