deploy: f4c492e8f2cf1ddeb5e631979ec07e8a3f3280d2

--- a/wj.htm
+++ b/wj.htm
@@ -7469,16 +7469,12 @@ point count increases.
    The 1M responses
   </h2>
   <p>
-   Opener rebids fairly naturally.  We group G/T hands by the length of the major
-suit.  We mix 15&ndash;17 HCP 6+
-   <span class="dcolor">
-    &diams;
-   </span>
-   and 18&ndash;20 HCP 5+
-   <span class="dcolor">
-    &diams;
-   </span>
-   hands in the same group.
+   Opener rebids fairly naturally.  Apart from
+   <em>
+    Polish Club 2020: Expert
+   </em>
+   , we move
+fit reverses to the 3-level.  This allows more exploration of a 2-6 major fit.
   </p>
   <div class="tree">
    <ul>
@@ -7589,7 +7585,11 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !F G/T, 15&ndash;20 HCP, 3=
+          !F, 15&ndash;17 HCP, 6+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 0&ndash;2
           <span class="hcolor">
            &hearts;
           </span>
@@ -7604,7 +7604,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           2NT
          </td>
          <td>
-          F G/T, 15&ndash;20 HCP, 2=
+          18&ndash;20 HCP, 0&ndash;2
           <span class="hcolor">
            &hearts;
           </span>
@@ -7640,11 +7640,11 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          15&ndash;17 HCP, 6+
+          !NF, 15&ndash;17 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
-          , 0&ndash;1
+          , 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -7680,7 +7680,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !FRAG, 18&ndash;20 HCP, 0&ndash;1
+          !FG, 18&ndash;20 HCP, 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -7788,11 +7788,15 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !F G/T, 15&ndash;20 HCP, 4+
+          !F, 15&ndash;20 HCP, 4+
           <span class="hcolor">
            &hearts;
           </span>
-          or 3=
+          or 6+
+          <span class="dcolor">
+           &diams;
+          </span>
+          0&ndash;2
           <span class="scolor">
            &spades;
           </span>
@@ -7826,7 +7830,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           2NT
          </td>
          <td>
-          F G/T, 15&ndash;20 HCP, 2=
+          18&ndash;20 HCP, 0&ndash;2
           <span class="scolor">
            &spades;
           </span>
@@ -7862,11 +7866,11 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          15&ndash;17 HCP, 6+
+          !NF, 15&ndash;17 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
-          , 0&ndash;1
+          , 3=
           <span class="scolor">
            &spades;
           </span>
@@ -7884,7 +7888,7 @@ suit.  We mix 15&ndash;17 HCP 6+
           </span>
          </td>
          <td>
-          !FRAG, 18&ndash;20 HCP, 0&ndash;1
+          !FG, 18&ndash;20 HCP, 3=
           <span class="scolor">
            &spades;
           </span>
@@ -9395,27 +9399,10 @@ relays in the three-way checkback:
           2NT
          </td>
          <td>
-          !F MIN
+          !PUP, MIN
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            !MIN (R), 15&ndash;17 HCP
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
@@ -9427,7 +9414,11 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          !&ldquo;4SFG&rdquo;
+          !&ldquo;4SFG&rdquo;, ask for 3=
+          <span class="scolor">
+           &spades;
+          </span>
+          or stopper
          </td>
         </tr>
        </table>
@@ -9442,7 +9433,7 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          INV, 2+
+          FG, 2+
           <span class="dcolor">
            &diams;
           </span>
@@ -9460,7 +9451,7 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          INV, 5+
+          FG, 6+
           <span class="hcolor">
            &hearts;
           </span>
@@ -9478,7 +9469,7 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          FG, 4+
+          FG, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -9516,7 +9507,7 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          NF, 5+
+          NF, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -9531,7 +9522,7 @@ relays in the three-way checkback:
           2NT
          </td>
          <td>
-          !F MIN
+          !(R), MIN
          </td>
         </tr>
        </table>
@@ -9546,7 +9537,7 @@ relays in the three-way checkback:
             </span>
            </td>
            <td>
-            !MIN (R), 15&ndash;17 HCP, 4+
+            4+
             <span class="hcolor">
              &hearts;
             </span>
@@ -9564,13 +9555,9 @@ relays in the three-way checkback:
             </span>
            </td>
            <td>
-            MIN, 15&ndash;17 HCP, 6+
+            6+
             <span class="dcolor">
              &diams;
-            </span>
-            , 3=
-            <span class="scolor">
-             &spades;
             </span>
            </td>
           </tr>
@@ -9592,6 +9579,44 @@ relays in the three-way checkback:
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            6+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            4+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -9603,7 +9628,7 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          INV, 2+
+          FG, 3+
           <span class="dcolor">
            &diams;
           </span>
@@ -9639,7 +9664,7 @@ relays in the three-way checkback:
           </span>
          </td>
          <td>
-          FG, 5+
+          FG, 6+
           <span class="scolor">
            &spades;
           </span>
