deploy: 3f902e5b997ed35c0146fb635e88898405fd0ecd

--- a/wj.htm
+++ b/wj.htm
@@ -1118,7 +1118,7 @@ Ting-Yu Ye (TpKotoba).
           Pass
          </td>
          <td>
-          12&ndash;14 HCP, 4+
+          12&ndash;14 HCP, BAL 4=
           <span class="dcolor">
            &diams;
           </span>
@@ -1140,7 +1140,10 @@ Ting-Yu Ye (TpKotoba).
           <span class="hcolor">
            &hearts;
           </span>
-          or 3334
+          or BAL MIN 3=
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
