deploy: 526e768912dd890a359dda127c198ed5a64b5da4

--- a/wj.htm
+++ b/wj.htm
@@ -11699,6 +11699,8 @@ use reverse Bergen raises for hearts for several reasons:
    <em>
     Polish Club 2020: Expert.
    </em>
+   As for 1M-(X)-4steps, we make this transfer CONST+ (~8+ HCP) as suggested by
+Ting-Yu Ye (TpKotoba).
   </p>
   <div class="tree">
    <ul>
@@ -11968,7 +11970,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          !PRE or FG, 3+
+          !CONST+, 3+
           <span class="scolor">
            &spades;
           </span>
@@ -11986,7 +11988,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          CONST, 3+
+          PRE, 3+
           <span class="scolor">
            &spades;
           </span>
@@ -12130,7 +12132,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          !PRE or FG, 3+
+          !CONST+, 3+
           <span class="hcolor">
            &hearts;
           </span>
@@ -12148,7 +12150,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          CONST, 3+
+          PRE, 3+
           <span class="hcolor">
            &hearts;
           </span>
