deploy: aefbec1aa391bc95f619fc7038620ab771ddcd60

--- a/blue.htm
+++ b/blue.htm
@@ -11025,7 +11025,15 @@ side minor suit.  Multi 2
    Unusual 2NT opening
   </h1>
   <p>
-   The unusual 2NT opening is a preempt with 55+ in minors.
+   The unusual 2NT opening is a preempt with 5+
+   <span class="dcolor">
+    &diams;
+   </span>
+   and 5+
+   <span class="ccolor">
+    &clubs;
+   </span>
+   .
   </p>
   <p>
    We advise against opening 2NT for (30)55 in the first two seats.
