--- a/defense.htm
+++ b/defense.htm
@@ -216,7 +216,7 @@ on that topic.
           Dbl
          </td>
          <td>
-          T/O 25+ ZP (~11+ HCP) or any 33+ ZP (good 16+ HCP)
+          T/O, 13+ points
          </td>
         </tr>
        </table>
@@ -228,7 +228,7 @@ on that topic.
           1Z
          </td>
          <td>
-          5+#, 21&ndash;32 ZP (9&ndash;17 points)
+          NAT, 9&ndash;17 points, usually 5+#
          </td>
         </tr>
        </table>
@@ -240,7 +240,7 @@ on that topic.
           1NT
          </td>
          <td>
-          29&ndash;32 ZP (15&ndash;17 HCP) w/ likely stop
+          NAT, 15&ndash;17 HCP with stopper
          </td>
         </tr>
        </table>
@@ -252,7 +252,7 @@ on that topic.
           2X
          </td>
          <td>
-          5+#, 25&ndash;32 ZP (11&ndash;17 HCP)
+          NAT, 12&ndash;17 points, 5+#
          </td>
         </tr>
        </table>
@@ -264,7 +264,7 @@ on that topic.
           2Z
          </td>
          <td>
-          6+#, 15&ndash;25 ZP (4&ndash;10 HCP)
+          PRE, 4&ndash;10 HCP, 6+#
          </td>
         </tr>
        </table>
@@ -276,7 +276,7 @@ on that topic.
           2NT
          </td>
          <td>
-          !UNT, 55+ in lowest two unbid suits
+          !UNT, 5+ 5+ in lowest two unbid suits
          </td>
         </tr>
        </table>
@@ -288,7 +288,7 @@ on that topic.
           3X
          </td>
          <td>
-          7+#, 21&ndash;25 ZP (5&ndash;9 HCP)
+          PRE, 5&ndash;9 HCP, usually 7+#
          </td>
         </tr>
        </table>
@@ -300,7 +300,7 @@ on that topic.
           3Y
          </td>
          <td>
-          !Gambling, SOL 7+m, at most partial stop
+          !Gambling, SOL 7+ suit without stopper
          </td>
         </tr>
        </table>
@@ -312,7 +312,7 @@ on that topic.
           3Z
          </td>
          <td>
-          7+#, 21&ndash;25 ZP (5&ndash;9 HCP)
+          PRE, 5&ndash;9 HCP, usually 7+#
          </td>
         </tr>
        </table>
@@ -324,7 +324,7 @@ on that topic.
           3NT
          </td>
          <td>
-          !Gambling, SOL 7+m w/ likely stop
+          !Gambling, SOL 7+ suit with stopper
          </td>
         </tr>
        </table>
@@ -374,7 +374,7 @@ on that topic.
             </span>
            </td>
            <td>
-            !(R), equal preference
+            !Equal preference
            </td>
           </tr>
          </table>
@@ -404,7 +404,7 @@ on that topic.
           </span>
          </td>
          <td>
-          !Michaels, 5+
+          !Michaels, 4+
           <span class="scolor">
            &spades;
           </span>
@@ -443,7 +443,7 @@ on that topic.
           <span class="scolor">
            &spades;
           </span>
-          , 5+m
+          , 4+m
          </td>
         </tr>
        </table>
@@ -499,7 +499,7 @@ on that topic.
           1NT
          </td>
          <td>
-          !UNT, 55+ in lowest two unbid suits
+          !UNT, 4+ 4+ in lowest two unbid suits
          </td>
         </tr>
        </table>
@@ -511,6 +511,10 @@ on that topic.
   <h2>
    Balancing overcall
   </h2>
+  <p>
+   Different from a direct overcall, a simple balancing overcall is tentative,
+while a jump overcall is sound.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -523,7 +527,7 @@ on that topic.
           Dbl
          </td>
          <td>
-          T/O 21+ ZP (8+ HCP) or any 29+ ZP (15+ HCP)
+          T/O, 8+ HCP
          </td>
         </tr>
        </table>
@@ -535,7 +539,7 @@ on that topic.
           1Z
          </td>
          <td>
-          4+#, 21&ndash;28 ZP (8&ndash;14 HCP)
+          NAT, 8&ndash;15 HCP, 4+#
          </td>
         </tr>
        </table>
@@ -547,7 +551,19 @@ on that topic.
           2X
          </td>
          <td>
-          5+#, 21&ndash;28 ZP (8&ndash;14 HCP)
+          NAT, 8&ndash;15 HCP, 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Z
+         </td>
+         <td>
+          NAT, 11&ndash;15 HCP, 6+#
          </td>
         </tr>
        </table>
@@ -556,10 +572,10 @@ on that topic.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2Z
+          3X
          </td>
          <td>
-          6+#, 21&ndash;25 ZP (8&ndash;11 HCP)
+          NAT, 11&ndash;15 HCP, 6+#
          </td>
         </tr>
        </table>
@@ -571,6 +587,20 @@ on that topic.
   <h3>
    Notrump overcalls
   </h3>
+  <p>
+   By unpassed hand, notrump overcalls are natural because we want a sound 2NT.
+  </p>
+  <ul>
+   <li>
+    13&ndash;15 HCP: 1NT
+   </li>
+   <li>
+    16&ndash;18 HCP: X, then notrump
+   </li>
+   <li>
+    19&ndash;21 HCP: 2NT
+   </li>
+  </ul>
   <div class="tree">
    <ul>
     <li class="root">
@@ -583,7 +613,7 @@ on that topic.
           1NT
          </td>
          <td>
-          12&ndash;15 HCP w/ stop
+          13&ndash;15 HCP with stopper
          </td>
         </tr>
        </table>
@@ -595,7 +625,7 @@ on that topic.
           2NT
          </td>
          <td>
-          19&ndash;21 HCP w/ stop
+          19&ndash;21 HCP with stopper
          </td>
         </tr>
        </table>
@@ -619,7 +649,7 @@ on that topic.
           1NT
          </td>
          <td>
-          !UNT, 55+ in lowest two unbid suits
+          !UNT, 4+ 4+ in lowest two unbid suits
          </td>
         </tr>
        </table>
@@ -632,8 +662,16 @@ on that topic.
    Advances to (1X)-1Y
   </h2>
   <p>
-   Raises and the higher new suit are more suit-oriented, so we use evaluations
-better for suit contracts.  We use the jump cuebid as a mixed raise.
+   Raises are natural and non-forcing.  Note that the overcall occasionally
+contains only 4 cards.  We always raise to the 3-level with 4+ trumps.
+  </p>
+  <p>
+   Z, a suit higher than Y, is always a major suit.  Bidding 1Z is forcing for
+constructiveness. Jump advances in Z are preemptive.
+  </p>
+  <p>
+   Notrump advances are natural in the sense of showing length or a stopper in the
+adverse suit.
   </p>
   <div class="tree">
    <ul>
@@ -647,74 +685,11 @@ better for suit contracts.  We use the jump cuebid as a mixed raise.
           1Z
          </td>
          <td>
-          F, 4+#, usually 21+ ZP (8+ HCP)
+          F, 4+#, usually 8+ HCP
          </td>
         </tr>
        </table>
       </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2Y
-         </td>
-         <td>
-          CONST, 21&ndash;24 ZP (8&ndash;11 HCP), 3+#
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2Z
-         </td>
-         <td>
-          PRE, 8&ndash;20 ZP (0&ndash;7 HCP), 6+#
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3X
-         </td>
-         <td>
-          !Mixed raise, 21&ndash;24 ZP (8&ndash;10 HCP), 4+Y
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3Y
-         </td>
-         <td>
-          PRE, 8&ndash;20 ZP (0&ndash;7 HCP), 4+#
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <p>
-   Notrump and the lower new suit are natural and non-forcing.  Note that the lower
-new suit is always a minor suit.  We are more interested in 3NT than a minor
-suit game.  If you have a strong hand without a stopper, cuebid to ask for a
-stopper.
-  </p>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     (1Y)-1Z
-     <ul>
       <li class="node">
        <table>
         <tr>
@@ -731,10 +706,22 @@ stopper.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2X
+          2Y
          </td>
          <td>
-          NF, 9&ndash;13 HCP, 5+#
+          CONST, 3+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Z
+         </td>
+         <td>
+          PRE, 6+#
          </td>
         </tr>
        </table>
@@ -755,10 +742,10 @@ stopper.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3X
+          3Y
          </td>
          <td>
-          NF, 14&ndash;15 HCP, 6+#
+          PRE, 4+#
          </td>
         </tr>
        </table>
@@ -768,24 +755,83 @@ stopper.
    </ul>
   </div>
   <p>
-   We use Rubens advances, where calls from the direct cuebid to the suit below the single raise are transfers.
+   Let's reword the auction as (1Y)-1Z to discuss X, a suit lower than Y. X is
+always a minor suit.  We are more interested in 3NT than a minor suit game.
+Therefore, we bear the presence of a stopper in mind.  Sometimes we have to bid
+a 4-card 2X because we lack a stopper to bid notrump.
+  </p>
+  <p>
+   Aggressor still has the chance to query a stopper with a cuebid.  That is why we
+can bid fairly naturally here.
+  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1Y)-1Z
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2X
+         </td>
+         <td>
+          F unless by PH, 9+ HCP, usually 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          INV, 6+#
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <p>
+   The other suits are Rubens advances.  Cuebids and suits in between are
+transfers.  After rephrasing the auction as (1X)-1Z, Y is a suit in between.
+There is no distinction between X and Y.  Transfer supports are special
+nevertheless.
   </p>
   <ul>
    <li>
     <strong>
-     Transfer to a new suit
+     4steps = 2Z &minus; 1
     </strong>
-    : 9+ HCP, 5+ cards in the new suit
+    : limit raise or better, 3+ support
    </li>
    <li>
     <strong>
-     Transfer support
+     9steps = 3Z &minus; 1
     </strong>
-    : INV+, 3+ card support, opening strength (or 10+ HCP by PH)
+    : mixed raise, 4+ support
+   </li>
+   <li>
+    <strong>
+     Other 2XY
+    </strong>
+    : 9+ HCP, usually 5+ cards
+   </li>
+   <li>
+    <strong>
+     Other 3XY
+    </strong>
+    : Game try with 6+ cards
    </li>
   </ul>
   <p>
-   The direct cuebid also asks for a stopper for the strong hands.
+   Despite that we have skipped the cuebid, aggressor can dissuade further
+investigation by simply accepting the transfer.
   </p>
   <div class="tree">
    <ul>
@@ -796,10 +842,58 @@ stopper.
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4steps
+         </td>
+         <td>
+          !TRF LIM+, 3+ support
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          9steps
+         </td>
+         <td>
+          !TRF CONST, 4+ support
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           2X
          </td>
          <td>
-          !F, TRF or 14+ HCP
+          !TRF, 9+ HCP, usually 5+ cards
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Y
+         </td>
+         <td>
+          !TRF, 9+ HCP, usually 5+ cards
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          !TRF G/T, 6+ cards
          </td>
         </tr>
        </table>
@@ -808,10 +902,10 @@ stopper.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2Y
+          3Y
          </td>
          <td>
-          !TRF
+          !TRF G/T, 6+ cards
          </td>
         </tr>
        </table>
