--- a/wj.htm
+++ b/wj.htm
@@ -12230,11 +12230,30 @@ Ting-Yu Ye (TpKotoba).
     </li>
    </ul>
   </div>
+  <p>
+   The sequences 1M-(1NT) and 1M-(2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   ) are also similar.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
      1M-(1NT)
      <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Dbl
+         </td>
+         <td>
+          Nearly BAL INV+
+         </td>
+        </tr>
+       </table>
+      </li>
       <li class="node">
        <table>
         <tr>
@@ -12379,6 +12398,37 @@ Ting-Yu Ye (TpKotoba).
    <ul>
     <li class="root">
      1
+     <span class="hcolor">
+      &hearts;
+     </span>
+     -(1NT)
+     <ul>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !TRF G/T, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
      <span class="scolor">
       &spades;
      </span>
@@ -12406,31 +12456,167 @@ Ting-Yu Ye (TpKotoba).
     </li>
    </ul>
   </div>
-  <p>
-   Here comes something different between 1
-   <span class="hcolor">
-    &hearts;
-   </span>
-   and 1
-   <span class="scolor">
-    &spades;
-   </span>
-   .  Over 1
-   <span class="hcolor">
-    &hearts;
-   </span>
-   , we yearn
-a negative free bid in spades before 2
-   <span class="hcolor">
-    &hearts;
-   </span>
-   .  A transfer scheme fulfills such
-wish.  On the other hand, this sorcery does not fit 1
-   <span class="scolor">
-    &spades;
-   </span>
-   .
-  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1M-(2
+     <span class="ccolor">
+      &clubs;
+     </span>
+     )
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Dbl
+         </td>
+         <td>
+          Nearly BAL INV+
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2X
+         </td>
+         <td>
+          NF, 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2M
+         </td>
+         <td>
+          NF, 3+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !TRF, PRE 7+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          or FG 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !TRF, PRE 7+
+          <span class="dcolor">
+           &diams;
+          </span>
+          or FG 6+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !TRF, PRE 7+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          or FG 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !TRF, PRE 7+
+          <span class="scolor">
+           &spades;
+          </span>
+          or FG 6+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !Gambling, SOL 7+ suit without stopper
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          !Gambling, SOL 7+ suit with stopper
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
   <div class="tree">
    <ul>
     <li class="root">
@@ -12438,62 +12624,12 @@ wish.  On the other hand, this sorcery does not fit 1
      <span class="hcolor">
       &hearts;
      </span>
-     -(1NT)
+     -(2
+     <span class="ccolor">
+      &clubs;
+     </span>
+     )
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !TRF, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !TRF, 5+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !TRF, usually 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="last node">
        <table>
         <tr>
@@ -12520,8 +12656,8 @@ wish.  On the other hand, this sorcery does not fit 1
    <ul>
     <li class="root">
      1
-     <span class="hcolor">
-      &hearts;
+     <span class="scolor">
+      &spades;
      </span>
      -(2
      <span class="ccolor">
@@ -12529,37 +12665,19 @@ wish.  On the other hand, this sorcery does not fit 1
      </span>
      )
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !TRF, 5+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
+          3
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
          <td>
-          !TRF G/T, 5+
-          <span class="dcolor">
-           &diams;
+          !TRF G/T, 4+
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
@@ -16985,7 +17103,15 @@ side minor suit.  Multi 2
    Unusual 2NT opening
   </h1>
   <p>
-   The unusual 2NT opening is a preempt with 55+ in minors.
+   The unusual 2NT opening is a preempt with 5+
+   <span class="dcolor">
+    &diams;
+   </span>
+   and 5+
+   <span class="ccolor">
+    &clubs;
+   </span>
+   .
   </p>
   <p>
    We advise against opening 2NT for (30)55 in the first two seats.
